--- a/index.html
+++ b/index.html
@@ -31,7 +31,12 @@
 		COURSEWORK
 		</td>
 		<td>
-		<b>Optional</b> (Consult with PDC staff to determine if relevant- use only if it applies to your major.)
+			<ul>
+				<li><b>Employee Database</b></li>
+				<li><b>TicTacToe game C#</b></li>
+				<li><b>Zylabs html,css,js practice</b></li>
+				<li><b>Networking switch and router labs</b></li>
+			</ul>
 		</td>
 	</tr>
 	<tr>
@@ -50,26 +55,21 @@
 	</tr>
 	<tr>
 		<td class="category">
-		EXPERIENCE
+		PROJECTS
 		</td>
 		<td>
-		<b>None</b>
+		<ul>
+		<li><b>Ustinov Rentals</b> Chair rental website</li>
+		<li><b>Game Mage</b> Game rating website</li>
 		</td>
+	</ul>
 	</tr>
 	<tr>
 		<td class="category">
-		HONORS
+		VOLUNTEER WORK
 		</td>
 		<td>
-		<b>None</b>
-		</td>
-	</tr>
-	<tr>
-		<td class="category">
-		ACTIVITIES
-		</td>
-		<td>
-		<b>None</b>
+		<b>Vacation Bible Study</b> for WORD International Ministries
 		</td>
 	</tr>
 
